--- a/BlazorServerExample/BlazorServerExample.csproj
+++ b/BlazorServerExample/BlazorServerExample.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\src\Isbm2Client\Isbm2Client.csproj" />
