--- a/BlazorServerExample/BlazorServerExample.csproj
+++ b/BlazorServerExample/BlazorServerExample.csproj
@@ -1,10 +1,20 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Data\Structure Assets.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Data\Structure Assets.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="30.0.1" />
