--- a/BlazorServerExample/BlazorServerExample.csproj
+++ b/BlazorServerExample/BlazorServerExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -24,4 +24,15 @@
     <ProjectReference Include="..\src\Isbm2Client\Isbm2Client.csproj" />
   </ItemGroup>
 
+	<Target Name="CheckForNpm" BeforeTargets="BuildCSS">
+		<Exec Command="npm -v" ContinueOnError="true">
+			<Output TaskParameter="ExitCode" PropertyName="ErrorCode" />
+		</Exec>
+		<Error Condition="'$(ErrorCode)' != '0'" Text="You must install NPM to build this project" />
+	</Target>
+
+	<Target Name="BuildCSS" BeforeTargets="Compile">
+		<Exec Command="npx tailwindcss -i Styles/app.css -o wwwroot/css/app.css" Condition="'$(Configuration)' == 'Debug'" />
+		<Exec EnvironmentVariables="NODE_ENV=production" Command="npx tailwindcss -i Styles/app.css -o wwwroot/css/app.css --minify" Condition="'$(Configuration)' == 'Release'" />
+	</Target>
 </Project>
