--- a/src/IsbmClientExample/IsbmClientExample.csproj
+++ b/src/IsbmClientExample/IsbmClientExample.csproj
@@ -2,7 +2,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Isbm2RestClient\Isbm2RestClient.csproj" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Isbm2Client\Isbm2Client.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
