--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,20 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/src/Isbm2RestClient.Test/Isbm2RestClient.Test.csproj",
+                "${workspaceFolder}/Isbm2RestClient.sln",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "run",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "run",
+                "--project",
+                "${workspaceFolder}/BlazorServerExample/BlazorServerExample.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
