--- a/src/Isbm2RestClient.Test/Isbm2RestClient.Test.csproj
+++ b/src/Isbm2RestClient.Test/Isbm2RestClient.Test.csproj
@@ -6,6 +6,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <Nullable>annotations</Nullable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
