--- a/src/IsbmClientExample/IsbmClientExample.csproj
+++ b/src/IsbmClientExample/IsbmClientExample.csproj
@@ -1,13 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\Isbm2RestClient\Isbm2RestClient.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Isbm2Client\Isbm2Client.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
@@ -15,5 +7,10 @@
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Isbm2Client" Version="0.1.*" />
+    <PackageReference Include="Isbm2RestClient" Version="0.1.*" />
+  </ItemGroup>
 
 </Project>
