--- a/BlazorServerExample/BlazorServerExample.csproj
+++ b/BlazorServerExample/BlazorServerExample.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -19,10 +19,8 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="30.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\src\Isbm2Client\Isbm2Client.csproj" />
+    <PackageReference Include="Isbm2Client" Version="0.1.*" />
+    <PackageReference Include="Isbm2RestClient" Version="0.1.*" />
   </ItemGroup>
 
 	<Target Name="CheckForNpm" BeforeTargets="BuildCSS">
